--- a/index.html
+++ b/index.html
@@ -62,21 +62,30 @@
           </button>
         </div>
         <div id="socials-container">
-          <img
-            src="./assets/LinkedIn.png"
-            alt="My LinkedIn profile"
-            class="icon"
-            onclick="location.href='https://www.linkedin.com/in/rui-nery-72a759125'"
-          />
+          <a
+            href="https://www.linkedin.com/in/rui-nery-72a759125"
+            target="_blank"
+            ><img
+              src="./assets/LinkedIn.png"
+              alt="My LinkedIn profile"
+              class="icon"
+              alt="Linked in Profile"
+          /></a>
+
           <img
             src="./assets/github_icon.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://https://github.com/Nery-25/'"
+            target="_blank"
+            alt="GitHub profile"
           />
         </div>
       </div>
     </section>
     <script src="script.js"></script>
+    <footer class="footer">
+      <p>@2023 Portofolio design by Rui Nery</p>
+    </footer>
   </body>
 </html>
