--- a/index.html
+++ b/index.html
@@ -35,13 +35,24 @@
         <h1 class="title">Nery</h1>
         <p class="section__text__p2">Full Stack Developer</p>
         <div class="btn-container">
+          <a
+            href="./assets/Rui Nery CV - EV.pdf"
+            title="Rui Nery CV"
+            download="Rui Nery CV"
+          ></a>
+
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            type="button"
+            onclick="downloadOrOpenCV()"
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button
+            class="btn btn-color-1"
+            type="button"
+            onclick="location.href='./#contact'"
+          >
             Contact Info
           </button>
         </div>
@@ -49,6 +60,7 @@
           <a
             href="https://www.linkedin.com/in/rui-nery-72a759125"
             target="_blank"
+            ;
             ><img
               src="./assets/LinkedIn.png"
               alt="My LinkedIn profile"
@@ -101,12 +113,8 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Extremely interested and motivated in constantly developing my
+              skills, in order to grow on a personal and professional level
             </p>
           </div>
         </div>
@@ -326,7 +334,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com" target="_blank">LinkedIn</a></p>
         </div>
       </div>
     </section>
